--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,11 @@ jobs:
           - ubuntu-latest
           - macos-latest
           - windows-latest
+        include:
+          # Cache gem bundle by default, but not on Windows.
+          - cache: true
+          - os: windows-latest
+            cache: false
 
     runs-on: ${{ matrix.os }}
 
@@ -31,7 +36,10 @@ jobs:
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: ${{ matrix.ruby }}
-          bundler-cache: true
+          bundler-cache: ${{ matrix.cache }}
+      - name: "Install gem bundle (for bundler-cache: false)"
+        if: ${{ !matrix.cache }}
+        run: bundle install
       - name: Dump Ruby version
         run: ruby -v
       - name: Run tests
