--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -55,8 +55,10 @@ Style/FrozenStringLiteralComment:
     - Gemfile
 
 # Use Ruby 1.9 hash syntax.
+# Do not enforce the hash value shorthand syntax of Ruby 3.1.
 Style/HashSyntax:
   EnforcedStyle: ruby19_no_mixed_keys
+  EnforcedShorthandSyntax: either
 
 # Allow parallel assignment.
 Style/ParallelAssignment:
